# Agentic-Recommender-Systems-

./: .gitignore  README.md
mcp-recommender-system-agent/: notes.py  notes.txt
mcp-recommender-system-agent/app/: Dockerfile  pyproject.toml  recommendation-system.py  requirements.txt  run_recommendation_system.sh
mcp-recommender-system-agent/app/results/: config.json  model.safetensors
mcp-recommender-system-agent/app/utilities/: google_sheet_utilities.py  similarity_search_utilities.py  train_model_utilties.py
